# project2_Dukhanina_Galina_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
