[tool.poetry]
name = "project2_Dukhanina_M25-555"
version = "0.1.0"
description = ""
authors = ["GalaDoker <galadoker44@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
