[tool.poetry]
name = "project2_Dukhanina_M25-555"
version = "0.1.0"
description = ""
authors = ["GalaDoker <galadoker44@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
